--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "l-systems",
   "version": "0.0.1",
   "main": "main.js",
+  "scripts": {
+    "start": "electron ."
+  },
   "dependencies": {
     "electron": "^1.6.2",
     "jquery": "^3.3.1",
