--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "start": "electron ."
   },
   "dependencies": {
-    "electron": "^1.6.2",
-    "jquery": "^3.3.1",
-    "bootstrap": "^4.0.0",
-    "spectrum-colorpicker": "^1.8.0",
-    "jcanvas": "^21.0.1",
-    "three": "^0.104.0"
+    "bootstrap": "^5.3.3",
+    "electron": "^29.3.0",
+    "jcanvas": "^22.0.1",
+    "jquery": "^3.7.1",
+    "spectrum-colorpicker": "^1.8.1",
+    "three": "^0.163.0"
+  },
+  "devDependencies": {
+    "vite": "^5.2.8"
   }
 }
